Fix off-center dots, add ctrl key functionality

--- a/Canvas/stylesheet.css
+++ b/Canvas/stylesheet.css
@@ -1,5 +1,3 @@
 canvas {
-	/*width: 600px;
-	height: 600px;*/
 	border: 1px solid #FF0000;
 }
